update to make more 402 friendly
